--- a/style.css
+++ b/style.css
@@ -7,15 +7,23 @@ body{
     background-color: #CCD5AE;   
 }
 
+.titre01{
+    margin-top: 40px;
+    
+}
+
 h1{
-    font-family: 'Montserrat', sans-serif;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #7c845f;
+    font-family: 'Lato', sans-serif; 
+    color: antiquewhite;
 }
 
 .maincontent{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 190px;
 }
 
 nav{
@@ -46,7 +54,7 @@ li a:hover:not(.active) {
 li a{
     display: block;
     text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: bold;
     color: #474d34;
@@ -57,23 +65,30 @@ li a{
 } */
 
 label{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: bold;
 }
 
 p{
     margin: 30px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 #addbutton{
     margin-left: 190px;
     padding: 10px;
     border-radius: 8px;
-    border: solid 1px #474d34;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.4s;
 }
 
-#prodname, #prodprice, #prodquantity{
+#addbutton:hover{
+    color:whitesmoke;
+    background-color: #474d34;
+}
+
+#prodname,  #prodquantity{
     height: 30px;
     width: 350px;
     padding-left: 5px;
@@ -83,4 +98,24 @@ p{
     font-size: 18px;
     outline: none;
     border-radius: 8px;
+    box-shadow: 7px 7px 0px 0px #7c845f;
+}
+
+#prodprice{
+    height: 30px;
+    width: 364px;
+    padding-left: 5px;
+    border: none;
+    background-color: #FAEDCD;
+    color: grey;
+    font-size: 18px;
+    outline: none;
+    border-radius: 8px;
+    box-shadow: 7px 7px 0px 0px #7c845f;
+}
+
+.tableprod{
+    display: flex;
+    justify-content: center;
+    border: solid 1px salmon;
 }
