Wip Qtt total on index.php

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ li a:hover:not(.active) {
 }
   
 .active {
-    background-color: #6a7264;
+    background-color: #507634;
     color:floralwhite
 }
 
