--- a/style.css
+++ b/style.css
@@ -165,3 +165,14 @@ td.qtt-rows{
 .my-table tbody tr:last-of-type {
     border-bottom: 2px solid #474d34;
 }
+
+#dump-out{
+    margin-top: 33px;
+    margin-left: 10px;
+    height: 45px;
+    width: 112px;
+}
+
+.dumping{
+    text-decoration: none;
+}
